--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 	<div class="content">
-		<h1>mtsandeep.githb.io</h1>
+		<h1>mtsandeep.github.io</h1>
 	</div>
 	<div class="footer">
 		<p>Powered by <a href="http://github.com">Github</a></p>
